fix: Adding spacing between toolbar and page

--- a/client/src/app/components/toolbar/toolbar.component.scss
+++ b/client/src/app/components/toolbar/toolbar.component.scss
@@ -8,4 +8,5 @@
 .tool-bar {
   background: #FFFFFF;
   border: 1px solid #EAEAEB;
+  margin-bottom: 25px;
 }
